
   * Invoking `vm-auto-archive-messages' requires an additional confirmation
     to guard against accidental invocation.  Set the variable
     `vm-confirm-for-auto-archive' to nil to turn this off.

   * `vm-mark-matching-messages' renamed to `vm-mark-messages-by-selector'
     and all related commands renamed similarly.  The old names will
     continue to work.

   IMPROVEMENTS

   * New commands `vm-create-search-folder-other-window' and
     `vm-create-search-folder-other-frame'.  Search folders can now have
     their own summary-formats that differ from those of the base folders.

   * Added support for Secure MIME (S/MIME) signatures and encryption (still
     experimental at this stage).  See the info section on Secure MIME.  To
     enable the verification of S/MIME signatures, set the variable
     `vm-mime-verify-signatures' to t.  Thanks to Arik Mitschang for this
     contribution.

   * Quitting a search folder using `vm-quit-no-change'
     prevents VM from changing the message pointer in the underlying folder.

   * Enhanced the Summary display to show the user mentioned in the
     "Reply-To" header (called the "principal"), when both the sender and
     the recipient match `vm-summary-uninteresting-senders'.  The variable
     `vm-summary-principal-marker' controls the tag used for showing the
     principal (default "For: ").

   * New variable `vm-mime-multipart/related-show-method' to force the
     display of MIME multipart/related attachments.

   * VM-Pcrisis extended to handle `vm-mail-from-folder'.

   * New variable `vm-subject-tag-prefix' allows the subject tags added by
     mailing lists to be ignored during sorting etc. (similar to
     `vm-subject-ignored-prefix').  Another variable
     `vm-summary-strip-subject-tags' removes them from summary lines as well.

   * New variable `vm-save-using-auto-folders' (default t), can be used to
     turn off auto-folder suggestions during message save.
