@@ -4841,13 +4841,15 @@ which is used in interactive confirmations."
 	       (count (vm-abs prefix))
 	       (vm-message-pointer vm-message-pointer) ; why this?
 	       mlist)
-	   (unless (eq vm-circular-folders t)
-	     (vm-check-count prefix))
-	   (while (not (zerop count))
-	     (setq mlist (cons (car vm-message-pointer) mlist))
-	     (vm-decrement count)
-	     (unless (zerop count)
-	       (vm-move-message-pointer direction)))
+	   (if (= prefix 0)
+	       (setq mlist (copy-sequence vm-message-list))
+	     (unless (eq vm-circular-folders t)
+	       (vm-check-count prefix))
+	     (while (not (zerop count))
+	       (setq mlist (cons (car vm-message-pointer) mlist))
+	       (vm-decrement count)
+	       (unless (zerop count)
+		 (vm-move-message-pointer direction))))
 	   (nreverse mlist)))
 	((and interactive
 	      (vm-summary-operation-p)
